--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
     "background_color": "purple",
-    "description": "Shows random fox pictures. Hey, at least it isn't cats.",
+    "description": "PWA Demo Page.",
     "display": "standalone",
     "icons": [
         {
-            "src": "icon/fox-icon.png",
+            "src": "app-icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         }
     ],
-    "name": "Awesome fox pictures",
-    "short_name": "Foxes",
+    "name": "PWA Demo",
+    "short_name": "PWADemo",
     "start_url": "index.html"
 }
